2018-11-26  Sam Varshavchik  <mrsam@courier-mta.com>

	* generic_window.C: Add set_window_type(), on_stabilized().

2018-11-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* Clean up create_checkbox() and create_radio(), replacing overloads
	with a reference to checkbox_config and radio_config, which may be
	default-constructed, and inherit from a common image_button_config
	superclass. Replace some data in the internal
	create_image_button_info with a reference to the image_button_config.

	* Implement a formal visible-focusoff_border() in new_listlayoutmanager
	and image_button_config, rather than documenting theme border
	names.

0.11

2018-11-23  Sam Varshavchik  <mrsam@courier-mta.com>

	* combobox/custom_comboboxlayoutmanager.C: A combo-box popup
	wasn't getting closed if the currently-selected item gets selected
	again.

	* list layout manager settings for hierarchical lists.

2018-11-22  Sam Varshavchik  <mrsam@courier-mta.com>

	* list layout manager: added optional row_alignments setting.
	Implemented hierindent{}.

	* listlayoutmanager/listlayoutmanager.C: Added remove_items().

	* listlayoutmanager/list_element_impl.C: Expose the style for list
	item separator in new_listlayoutmanager.list_separator_border

0.10.0

2018-11-14  Sam Varshavchik  <mrsam@courier-mta.com>

	* Fixed-size shading theme option.

	* Pane layout manager overhaul.

2018-11-09  Sam Varshavchik  <mrsam@courier-mta.com>

	* popup/popup_handler.C: Fix combo-box popup delay.

2018-11-05  Sam Varshavchik  <mrsam@courier-mta.com>

	* includes/x/w/panelayoutmanagerobj.H: Remove pane_lock, since
	the pane layout manager derives from the grid layout manager, and
	will automatically acquire a lock.

2018-11-01  Sam Varshavchik  <mrsam@courier-mta.com>

	* includes/x/w/gridlayoutmanagerobj.H: Add a lock on the internal
	grid map. Constructing a gridlayoutmanager object automatically
	acquires the lock.

2018-10-30  Sam Varshavchik  <mrsam@courier-mta.com>
